force-app/main/default/objects/Opportunity/fields/Access_Date__c.field-meta.xml
<CustomField>
    <fullName>Access_Date__c</fullName>
    <description>.</description>
    <inlineHelpText>The date on which the brand takes possession of the unit.</inlineHelpText>
    <label>Actual Access Date</label>
    <type>Date</type>
</CustomField>