force-app/main/default/objects/Opportunity/fields/Access_Date_Expected__c.field-meta.xml
<CustomField>
    <fullName>Access_Date_Expected__c</fullName>
    <inlineHelpText>The date on which the brand is expected to take possession of the unit</inlineHelpText>
    <label>Expected Access Date</label>
    <type>Date</type>
</CustomField>