force-app/main/default/objects/Opportunity/fields/Actual_Last_Trading_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Last_Trading_Date__c</fullName>
    <inlineHelpText>The date on which the brand actually closes it&apos;s doors to the guests</inlineHelpText>
    <label>Actual Last Trading Date</label>
    <type>Date</type>
</CustomField>