force-app/main/default/objects/Opportunity/fields/Actual_Opening_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Opening_Date__c</fullName>
    <inlineHelpText>The date the brand actually opens it&apos;s doors to begin trading</inlineHelpText>
    <label>Actual Opening Date</label>
    <type>Date</type>
</CustomField>