force-app/main/default/objects/Opportunity/fields/All_View_Display__c.field-meta.xml
<CustomField>
    <fullName>All_View_Display__c</fullName>
    <formula>IF( OR(ISNULL( Open_Date__c ), ISNULL( Exit_Date__c)), TRUE, FALSE)</formula>
    <label>All View Display</label>
    <type>Checkbox</type>
</CustomField>