force-app/main/default/objects/Opportunity/fields/Annual_Base_Rent__c.field-meta.xml
<CustomField>
    <fullName>Annual_Base_Rent__c</fullName>
    <formula>Annual_Base_Rent_Local__c * FX_Rate__c</formula>
    <inlineHelpText>Annual Base Rent charge</inlineHelpText>
    <label>Annual Base Rent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>