force-app/main/default/objects/Opportunity/fields/Annual_Base_Rent_for_calc__c.field-meta.xml
<CustomField>
    <fullName>Annual_Base_Rent_for_calc__c</fullName>
    <description>Hidden field used in formula field calculations to circumvent formula max length issues.</description>
    <label>Annual Base Rent for calc</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>