force-app/main/default/objects/Opportunity/fields/Annual_Base_Rent_Local__c.field-meta.xml
<CustomField>
    <fullName>Annual_Base_Rent_Local__c</fullName>
    <formula>Annual_Base_Rent_for_calc__c</formula>
    <label>Annual Base Rent (Local)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>