force-app/main/default/objects/Opportunity/fields/Annual_Service_Charge__c.field-meta.xml
<CustomField>
    <fullName>Annual_Service_Charge__c</fullName>
    <formula>Annual_Service_Charge_Local__c  * FX_Rate__c</formula>
    <inlineHelpText>Annual Service Charge in group currency</inlineHelpText>
    <label>Annual Service Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>