force-app/main/default/objects/Opportunity/fields/Annual_Service_Charge_for_calc__c.field-meta.xml
<CustomField>
    <fullName>Annual_Service_Charge_for_calc__c</fullName>
    <description>Hidden field updated by Workflow rule and used to overcome max. length formula errors.</description>
    <label>Annual Service Charge_for_calc</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>