force-app/main/default/objects/Opportunity/fields/Annual_Service_Charge_Local__c.field-meta.xml
<CustomField>
    <fullName>Annual_Service_Charge_Local__c</fullName>
    <formula>Service_Charge__c  *  Effective_Size_for_Charges__c</formula>
    <label>Annual Service Charge (Local)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>