force-app/main/default/objects/Opportunity/fields/Annual_ToR_Gross__c.field-meta.xml
<CustomField>
    <fullName>Annual_ToR_Gross__c</fullName>
    <formula>Projected_Return_Local__c * Projected_Sales__c</formula>
    <inlineHelpText>Annual T/O rent charge based on projections in group currency</inlineHelpText>
    <label>Annual ToR Gross</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>