force-app/main/default/objects/Opportunity/fields/Annual_ToR_Gross_Local__c.field-meta.xml
<CustomField>
    <fullName>Annual_ToR_Gross_Local__c</fullName>
    <formula>Projected_Sales_Local__c  *  Projected_Return_Local__c</formula>
    <label>Annual ToR Gross (Local)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>