force-app/main/default/objects/Opportunity/fields/Annual_ToR_Net__c.field-meta.xml
<CustomField>
    <fullName>Annual_ToR_Net__c</fullName>
    <formula>IF( ( Annual_ToR_Gross__c - Annual_Base_Rent__c )  &lt; 0, 0,( Annual_ToR_Gross__c - Annual_Base_Rent__c ) )</formula>
    <inlineHelpText>Annual Gross T/O rent net of Base Rent, this will be Zero if Annual Gross T/O Rent is less than Base Rent</inlineHelpText>
    <label>Annual ToR Net</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>