force-app/main/default/objects/Opportunity/fields/Annual_ToR_Net_Local__c.field-meta.xml
<CustomField>
    <fullName>Annual_ToR_Net_Local__c</fullName>
    <formula>IF( ( Annual_ToR_Gross_Local__c - Annual_Base_Rent_Local__c ) &lt; 0, 0,( Annual_ToR_Gross_Local__c - Annual_Base_Rent_Local__c ) )</formula>
    <label>Annual ToR Net (Local)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>