force-app/main/default/objects/Opportunity/fields/Annualization_Factor__c.field-meta.xml
<CustomField>
    <fullName>Annualization_Factor__c</fullName>
    <formula>IF( Brand_Open_Days__c &gt; 0, ( 1 / Brand_Open_Days__c ) * Village_Open_Days__c, 1)</formula>
    <label>Annualization Factor</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>