force-app/main/default/objects/Opportunity/fields/Annualized_Projected_Figures__c.field-meta.xml
<CustomField>
    <fullName>Annualized_Projected_Figures__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicate whether projected figures entered are annualized.</description>
    <inlineHelpText>Indicate whether projected figures entered are annualized.</inlineHelpText>
    <label>Annualized ?</label>
    <type>Checkbox</type>
</CustomField>