force-app/main/default/objects/Opportunity/fields/Associated_Deal__c.field-meta.xml
<CustomField>
    <fullName>Associated_Deal__c</fullName>
    <description>Returns true if any of the specified fields match the current user</description>
    <formula>OR(
   Lead_Negotiator_for_VR__c = $User.Id, 
   OwnerId = $User.Id, 
   Account.EU_Brand_Captain__c= $User.Id, 
   Account.China_Brand_Captain__c= $User.Id, 
   Account.GRS_Captain__c= $User.Id, 
   Account.Brand_Advocate__c= $User.Id
)</formula>
    <label>Associated Deal</label>
    <type>Checkbox</type>
</CustomField>