force-app/main/default/objects/Opportunity/fields/Auto_Sync__c.field-meta.xml
<CustomField>
    <fullName>Auto_Sync__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If selected, the Deal with sync with certain fields on the Village presence</description>
    <inlineHelpText>If set, whenever the deal is updated certain fields will be automatically pushed to the Village Presence.</inlineHelpText>
    <label>Auto Sync</label>
    <type>Checkbox</type>
</CustomField>