force-app/main/default/objects/Opportunity/fields/Bank_Consent__c.field-meta.xml
<CustomField>
    <fullName>Bank_Consent__c</fullName>
    <description>Does the deal require Bank consent?</description>
    <inlineHelpText>Does the deal require Bank consent?</inlineHelpText>
    <label>Bank Consent</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No- Tier 1</fullName>
            </value>
            <value>
                <fullName>No - Tier 2</fullName>
            </value>
            <value>
                <fullName>No - Tier 2a</fullName>
            </value>
            <value>
                <fullName>No - Tier 2b</fullName>
            </value>
            <value>
                <fullName>No - Tier 2c</fullName>
            </value>
            <value>
                <fullName>No - Tier 3a</fullName>
            </value>
            <value>
                <fullName>No - Tier 3b</fullName>
            </value>
            <value>
                <fullName>No - Tier 4</fullName>
            </value>
            <value>
                <fullName>No - Tier 4*</fullName>
            </value>
            <value>
                <fullName>No - Tier 5</fullName>
            </value>
            <value>
                <fullName>Yes- Tier 1</fullName>
            </value>
            <value>
                <fullName>Yes - Tier 2</fullName>
            </value>
            <value>
                <fullName>Yes - Tier 2a</fullName>
            </value>
            <value>
                <fullName>Yes - Tier 2b</fullName>
            </value>
            <value>
                <fullName>Yes - Tier 2c</fullName>
            </value>
            <value>
                <fullName>Yes - Tier 3a</fullName>
            </value>
            <value>
                <fullName>Yes - Tier 3b</fullName>
            </value>
            <value>
                <fullName>Yes - Tier 4</fullName>
            </value>
            <value>
                <fullName>Yes - Tier 4b</fullName>
            </value>
            <value>
                <fullName>Yes - Tier 4*</fullName>
            </value>
            <value>
                <fullName>Yes - Tier 5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>