force-app/main/default/objects/Opportunity/fields/Bank_Guarantee_Months__c.field-meta.xml
<CustomField>
    <fullName>Bank_Guarantee_Months__c</fullName>
    <description>Bank Guarantee in Months</description>
    <inlineHelpText>Bank Guarantee in Months</inlineHelpText>
    <label>Bank Guarantee (Months)</label>
    <type>TextArea</type>
</CustomField>