force-app/main/default/objects/Opportunity/fields/Base_Rent__c.field-meta.xml
<CustomField>
    <fullName>Base_Rent__c</fullName>
    <inlineHelpText>Annual charge for base rent per village metric (sq.m or sq.ft)</inlineHelpText>
    <label>Base Rent (Local)</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>