force-app/main/default/objects/Opportunity/fields/Base_Rent_Group__c.field-meta.xml
<CustomField>
    <fullName>Base_Rent_Group__c</fullName>
    <formula>CASE( Village__r.Village_Code__c , &apos;BV&apos;,  (Base_Rent__c  *  FX_Rate__c *  SF__c)  / 12 , &apos;FV&apos;, Base_Rent__c / 12,Base_Rent__c)</formula>
    <inlineHelpText>Group Base Rent</inlineHelpText>
    <label>Base Rent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>