force-app/main/default/objects/Opportunity/fields/Brand_Advocate__c.field-meta.xml
<CustomField>
    <fullName>Brand_Advocate__c</fullName>
    <formula>Account.Brand_Advocate__r.FirstName &amp; &apos; &apos; &amp;  Account.Brand_Advocate__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Brand Advocate</label>
    <type>Text</type>
</CustomField>