force-app/main/default/objects/Opportunity/fields/Brand_Captain__c.field-meta.xml
<CustomField>
    <fullName>Brand_Captain__c</fullName>
    <description>This is an old field for EU Brand Captain that is no longer used.  This field cannot be easily removed from Salesforce as it is included in Apex Classes and various Report Types.</description>
    <label>EUBC</label>
    <length>25</length>
    <type>Text</type>
</CustomField>