force-app/main/default/objects/Opportunity/fields/Brand_Closed_Days__c.field-meta.xml
<CustomField>
    <fullName>Brand_Closed_Days__c</fullName>
    <inlineHelpText>The number of days the brand will be closed in the current year when the village is open</inlineHelpText>
    <label>Brand Closed Days</label>
    <summarizedField>Brand_Closed_Period__c.Brand_Closed_Days__c</summarizedField>
    <summaryFilterItems>
        <field>Brand_Closed_Period__c.Active__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Brand_Closed_Period__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>