force-app/main/default/objects/Opportunity/fields/Brand_in_4th_Quartile__c.field-meta.xml
<CustomField>
    <fullName>Brand_in_4th_Quartile__c</fullName>
    <label>Brand in 4th Quartile</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes - Tier 1</fullName>
            </value>
            <value>
                <fullName>No - Tier 4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>