force-app/main/default/objects/Opportunity/fields/Brand_Name_in_Chinese__c.field-meta.xml
<CustomField>
    <fullName>Brand_Name_in_Chinese__c</fullName>
    <inlineHelpText>Enter the Brand name in Chinese if relevant</inlineHelpText>
    <label>Brand Name in Chinese</label>
    <length>100</length>
    <type>Text</type>
</CustomField>