force-app/main/default/objects/Opportunity/fields/Brand_Open_Days__c.field-meta.xml
<CustomField>
    <fullName>Brand_Open_Days__c</fullName>
    <formula>IF( TODAY()  &gt;  Exit_Date__c , 0,( ( ( To__c - From__c ) + 1 ) - Brand_Closed_Days__c ) - Village_Closed_Days__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The number of days the brand will be open in the current year including both brand and village closed days</inlineHelpText>
    <label>Brand Open Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>