force-app/main/default/objects/Opportunity/fields/bt_stripe__Customer__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>bt_stripe__Stripe_Customer__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>