force-app/main/default/objects/Opportunity/fields/bt_stripe__Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Payment_Method__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Method</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>bt_stripe__Payment_Method__c.bt_stripe__Stripe_Customer__c</field>
            <operation>equals</operation>
            <valueField>$Source.bt_stripe__Customer__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>bt_stripe__Payment_Method__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>