force-app/main/default/objects/Opportunity/fields/bt_stripe__Proration_Behavior__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Proration_Behavior__c</fullName>
    <description>Determines how to handle prorations when the billing cycle changes (e.g., when switching plans, resetting billing_cycle_anchor=now, or starting a trial), or if an item’s quantity changes.</description>
    <inlineHelpText>Determines how to handle prorations when the billing cycle changes (e.g., when switching plans, resetting billing_cycle_anchor=now, or starting a trial), or if an item’s quantity changes.</inlineHelpText>
    <label>Proration Behavior</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Create Prorations</fullName>
                <default>true</default>
                <label>Create Prorations</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>