force-app/main/default/objects/Opportunity/fields/Budget_Effective_Size_sq_m__c.field-meta.xml
<CustomField>
    <fullName>Budget_Effective_Size_sq_m__c</fullName>
    <formula>Budget_Unit__r.Size_GEA__c</formula>
    <inlineHelpText>The effective size of the budget unit otherwise the ideal size, always in sq.m</inlineHelpText>
    <label>Budget Effective Size sq.m</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>