force-app/main/default/objects/Opportunity/fields/Budget_Exit_Date__c.field-meta.xml
<CustomField>
    <fullName>Budget_Exit_Date__c</fullName>
    <inlineHelpText>This is the date the brand was expected to exit at the time that the budget was set.</inlineHelpText>
    <label>Budget Exit Date</label>
    <type>Date</type>
</CustomField>