force-app/main/default/objects/Opportunity/fields/Budget_Open_Date__c.field-meta.xml
<CustomField>
    <fullName>Budget_Open_Date__c</fullName>
    <inlineHelpText>This is the date the brand was expected to open at the time that the budget was set.</inlineHelpText>
    <label>Budget Open Date</label>
    <type>Date</type>
</CustomField>