force-app/main/default/objects/Opportunity/fields/Budget_Open_Exit_Date__c.field-meta.xml
<CustomField>
    <fullName>Budget_Open_Exit_Date__c</fullName>
    <inlineHelpText>Enter the Open/Exit date if this opportunity has been budgetted</inlineHelpText>
    <label>Budget Open/Exit Date</label>
    <type>Date</type>
</CustomField>