force-app/main/default/objects/Opportunity/fields/Budget_Type__c.field-meta.xml
<CustomField>
    <fullName>Budget_Type__c</fullName>
    <label>Budget Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New Brand</fullName>
            </value>
            <value>
                <fullName>Renewal</fullName>
            </value>
            <value>
                <fullName>Amendment</fullName>
            </value>
            <value>
                <fullName>Rebrand</fullName>
            </value>
            <value>
                <fullName>Termination</fullName>
            </value>
            <value>
                <fullName>temp to perm</fullName>
            </value>
            <value>
                <fullName>perm to temp</fullName>
            </value>
            <value>
                <fullName>extension</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>