force-app/main/default/objects/Opportunity/fields/Budget_Unit__c.field-meta.xml
<CustomField>
    <fullName>Budget_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This is the unit that was associated to the Deal at the time the budget was set</inlineHelpText>
    <label>Budget Unit</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Unit__c.Unit_Status__c</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <filterItems>
            <field>Unit__c.Village__c</field>
            <operation>equals</operation>
            <valueField>$Source.Village__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Unit__c</referenceTo>
    <relationshipLabel>Opportunities (Budget Unit)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>